--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "js-cookies": "^1.0.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
